--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-robin": "^6.1.3"
   },
   "dependencies": {
+    "async": "^3.2.0",
     "axios": "^0.21.1",
     "commander": "^7.2.0",
     "extract-zip": "^2.0.1",
