--- a/.github/workflows/notion_backup.yml
+++ b/.github/workflows/notion_backup.yml
@@ -27,13 +27,18 @@ jobs:
 
       - name: Setup dependencies
         run: npm install -g notion-backup
+      
+      - name: Find files with long paths
+        run: |
+          LONG_PATH_FILES=$(find . -type f -print | awk 'length($0) >= 256')
+          if [ -n "$LONG_PATH_FILES" ]; then
+            echo "Skipping backup for files with long names:"
+            echo "$LONG_PATH_FILES"
+            exit 0
+          fi
 
       - name: Run backup
         run: |
-          find . -type f -print | awk 'length($0) >= 256' | while read -r file; do
-            echo "Skipping backup for file with long name: $file"
-          done
-
           notion-backup
         env:
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
