--- a/.github/workflows/notion_backup.yml
+++ b/.github/workflows/notion_backup.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
   #schedule:
-  #  -   cron: "0 */4 * * *"
+  #  - cron: "0 */4 * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -28,27 +28,32 @@ jobs:
       - name: Setup dependencies
         run: npm install -g notion-backup
 
-      - name: ls
-        run: |
-          ls -al
-
       - name: Run backup
         run: |
-          set +e  # Disable exit on error temporarily
-          notion-backup 2>&1 | tee backup.log || true  # Log output to a file and continue on error
-          grep 'Skipping backup for file with long name' backup.log | cut -d ' ' -f 8- > nobackupfiles.txt
-          set -e  # Enable exit on error back
+          backup_successful=true
+          failed_files=()
+          while $backup_successful; do
+            notion-backup || {
+              # Check if the error is due to path length
+              if [[ $(notion-backup 2>&1) =~ "file name too long" ]]; then
+                echo "Skipped file due to path length issue."
+              else
+                backup_successful=false
+                failed_files+=("$(notion-backup 2>&1)")
+              fi
+            }
+          done
         env:
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
           NOTION_FILE_TOKEN: ${{ secrets.NOTION_FILE_TOKEN }}
           NOTION_SPACE_ID: ${{ secrets.NOTION_SPACE_ID }}
           NODE_OPTIONS: "--max-http-header-size 15000"
 
-      #- name: Delete zips
-      #  run: |
-      #    rm -f *.zip
-      #    rm -f markdown/*-Part*.zip
-      #    rm -f html/*-Part*.zip
+    #  - name: Delete zips
+    #    run: |
+    #      rm -f *.zip
+    #      rm -f markdown/*-Part*.zip
+    #      rm -f html/*-Part*.zip
 
       - name: Commit changes
         run: |
@@ -57,3 +62,12 @@ jobs:
           git add .
           git commit -m "Automated snapshot"
           git push
+
+      - name: Print failed files
+        run: |
+          if [ ${#failed_files[@]} -gt 0 ]; then
+            echo "Failed to back up the following files:"
+            for file in "${failed_files[@]}"; do
+              echo "$file"
+            done
+          fi
