--- a/.github/workflows/notion_backup.yml
+++ b/.github/workflows/notion_backup.yml
@@ -4,17 +4,14 @@ on:
   push:
     branches:
       - master
-  #schedule:
-  #  - cron: "0 */4 * * *"
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  schedule:
+    - cron: "0 */4 * * *"
 
 jobs:
   backup:
     runs-on: ubuntu-latest
     name: Backup
-    #timeout-minutes: 15
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v3
 
@@ -30,30 +27,24 @@ jobs:
 
       - name: Run backup
         run: |
-          backup_successful=true
-          failed_files=()
-          while $backup_successful; do
-            notion-backup || {
-              # Check if the error is due to path length
-              if [[ $(notion-backup 2>&1) =~ "file name too long" ]]; then
-                echo "Skipped file due to path length issue."
-              else
-                backup_successful=false
-                failed_files+=("$(notion-backup 2>&1)")
-              fi
-            }
+          backup_failed=false
+          while true; do
+            notion-backup || { backup_failed=true; break; }
           done
+          if [ "$backup_failed" = true ]; then
+            echo "Backup failed. Continuing with the rest of the workflow."
+          fi
         env:
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
           NOTION_FILE_TOKEN: ${{ secrets.NOTION_FILE_TOKEN }}
           NOTION_SPACE_ID: ${{ secrets.NOTION_SPACE_ID }}
           NODE_OPTIONS: "--max-http-header-size 15000"
 
-    #  - name: Delete zips
-    #    run: |
-    #      rm -f *.zip
-    #      rm -f markdown/*-Part*.zip
-    #      rm -f html/*-Part*.zip
+      - name: Delete zips
+        run: |
+          rm -f *.zip
+          rm -f markdown/*-Part*.zip
+          rm -f html/*-Part*.zip
 
       - name: Commit changes
         run: |
@@ -63,11 +54,7 @@ jobs:
           git commit -m "Automated snapshot"
           git push
 
-      - name: Print failed files
+      - name: List files with backup errors
         run: |
-          if [ ${#failed_files[@]} -gt 0 ]; then
-            echo "Failed to back up the following files:"
-            for file in "${failed_files[@]}"; do
-              echo "$file"
-            done
-          fi
+          find . -name '*-error.log' -exec cat {} \; > backup_errors.log
+          cat backup_errors.log
