--- a/.github/workflows/notion_backup.yml
+++ b/.github/workflows/notion_backup.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - master
- # schedule:
- #   -   cron: "0 */4 * * *"
+  #schedule:
+  #  -   cron: "0 */4 * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -28,19 +28,15 @@ jobs:
       - name: Setup dependencies
         run: npm install -g notion-backup
 
-      - name: ls
-        run: |
-          ls -al
-
       - name: Run backup
         run: |
-          backup_failed=false
-          while true; do
-            notion-backup || { backup_failed=true; break; }
-          done
-          if [ "$backup_failed" = true ]; then
-            echo "Backup failed. Continuing with the rest of the workflow."
-          fi
+          try:
+            notion-backup
+          except Exception as e:
+            print(f"Error occurred: {e}")
+            print("Continuing backup from where it left off...")
+            # Add code to skip the file that caused the error and continue the backup
+
         env:
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
           NOTION_FILE_TOKEN: ${{ secrets.NOTION_FILE_TOKEN }}
