--- a/.github/workflows/notion_backup.yml
+++ b/.github/workflows/notion_backup.yml
@@ -5,10 +5,7 @@ on:
     branches:
       - master
   #schedule:
-  #  -   cron: "0 */4 * * *"
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  #  - cron: "0 */4 * * *"
 
 jobs:
   backup:
@@ -16,9 +13,11 @@ jobs:
     name: Backup
    # timeout-minutes: 15
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
           node-version: '18'
 
@@ -28,24 +27,25 @@ jobs:
       - name: Setup dependencies
         run: npm install -g notion-backup
 
+      # Try to resume from previous successful backup
+      - name: Restore backup progress
+        id: restore-progress
+        run: echo '::set-output name=backup_files::$(cat backup_progress.txt || true)'
+
       - name: Run backup
         run: |
-          while true; do
-            notion-backup || { 
-              status=$?
-              if [ $status -eq 1 ]; then
-                echo "File path too long. Skipping the file and continuing..."
-                continue
-              else
-                exit $status
-              fi
-            }
-          done
+          set -e
+          notion-backup || true
+          echo "${{ env.NOTION_SPACE_ID }}/**/*.md" >> backup_progress.txt
         env:
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
           NOTION_FILE_TOKEN: ${{ secrets.NOTION_FILE_TOKEN }}
           NOTION_SPACE_ID: ${{ secrets.NOTION_SPACE_ID }}
           NODE_OPTIONS: "--max-http-header-size 15000"
+
+      - name: Save backup progress
+        if: always()
+        run: echo "${{ steps.restore-progress.outputs.backup_files }}" > backup_progress.txt
 
       - name: Delete zips
         run: |
