--- a/.github/workflows/notion_backup.yml
+++ b/.github/workflows/notion_backup.yml
@@ -4,20 +4,21 @@ on:
   push:
     branches:
       - master
-  #schedule:
-  #  - cron: "0 */4 * * *"
+ # schedule:
+ #   -   cron: "0 */4 * * *"
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   backup:
     runs-on: ubuntu-latest
     name: Backup
-   # timeout-minutes: 15
+    #timeout-minutes: 15
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: '18'
 
@@ -26,6 +27,10 @@ jobs:
 
       - name: Setup dependencies
         run: npm install -g notion-backup
+
+      - name: ls
+        run: |
+          ls -al
 
       # Try to resume from previous successful backup
       - name: Restore backup progress
