--- a/.github/workflows/notion_backup.yml
+++ b/.github/workflows/notion_backup.yml
@@ -62,6 +62,12 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+
+        if [[ $(git status --porcelain) ]]; then
           git add .
-          git commit -m "Automated snapshot"
+          git commit -m "Автоматический снимок"
           git push
+        else
+          echo "Нет изменений для коммита."
+        fi
+
