--- a/.github/workflows/notion_backup.yml
+++ b/.github/workflows/notion_backup.yml
@@ -52,11 +52,11 @@ jobs:
         if: always()
         run: echo "${{ steps.restore-progress.outputs.backup_files }}" > backup_progress.txt
 
-      - name: Delete zips
-        run: |
-          rm -f *.zip
-          rm -f markdown/*-Part*.zip
-          rm -f html/*-Part*.zip
+      # - name: Delete zips
+      #   run: |
+      #     rm -f *.zip
+      #     rm -f markdown/*-Part*.zip
+      #     rm -f html/*-Part*.zip
 
       - name: Commit changes
         run: |
