--- a/.github/workflows/notion_backup.yml
+++ b/.github/workflows/notion_backup.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - master
-  # schedule:
-  #   - cron: "0 */4 * * *"
+  schedule:
+    # - cron: "0 */4 * * *"
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -29,12 +29,18 @@ jobs:
 
       - name: Run backup
         run: |
-          while true; do
-            notion-backup || true
-            if [ $? -ne 0 ]; then
-              echo "ENAMETOOLONG error occurred, skipping file: $file" >> failed_files.txt
-            fi
-          done
+          backup() {
+            for file in *; do
+              if [ -f "$file" ]; then
+                notion-backup "$file" || echo "$file" >> failed_files.txt
+              elif [ -d "$file" ]; then
+                cd "$file" || exit
+                backup
+                cd ..
+              fi
+            done
+          }
+          backup
         env:
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
           NOTION_FILE_TOKEN: ${{ secrets.NOTION_FILE_TOKEN }}
